# Mio-Music

./: .gitignore  README.md  README_EN.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
.trellis/: .developer  .template-hashes.json
.trellis/spec/frontend/: component-guidelines.md  directory-structure.md  hook-guidelines.md  index.md  playback-contracts.md  plugin-execution.md  quality-guidelines.md  state-management.md  type-safety.md
.trellis/workspace/Mio/: index.md  journal-0.md  journal-1.md
docs/superpowers/specs/: 2026-06-27-mio-music-website-design.md
scripts/: check-bridge-contracts.mjs  dev.sh  patch-android-native-audio.mjs
src/: App.vue  auto-imports.d.ts  components.d.ts  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio_capture/: capture.rs
src-tauri/src/audio_device/: macos.rs  mod.rs
src-tauri/src/commands/: config_commands.rs  directory_commands.rs  hotkey_commands.rs  mod.rs  music_commands.rs  playlist_commands.rs  power_save.rs  s3_commands.rs
src-tauri/src/db/: mod.rs  music_db.rs  playlist_db.rs
src-tauri/src/dlna/: android.rs  commands.rs  manager.rs  mod.rs  types.rs  xml.rs
src-tauri/src/download/: commands.rs  manager.rs  types.rs
src-tauri/src/local_music/: commands.rs  cover_cache.rs  mod.rs  scanner.rs
src-tauri/src/music_sdk/: client.rs  commands.rs  mod.rs
src-tauri/src/music_sdk/sources/: bd.rs  git.rs  kg.rs  kw.rs  mg.rs  mod.rs  tx.rs  wy.rs  xm.rs
src-tauri/src/music_sdk/sources/kg/: comment.rs  crypto.rs  helpers.rs  mod.rs  playback.rs  playlist.rs  search.rs  singer.rs
src-tauri/src/music_sdk/sources/kw/: comment.rs  helpers.rs  mod.rs  playback.rs  playlist.rs  search.rs  singer.rs
src-tauri/src/music_sdk/sources/mg/: comment.rs  crypto.rs  helpers.rs  mod.rs  playback.rs  playlist.rs  search.rs  singer.rs
src-tauri/src/music_sdk/sources/subsonic/: mod.rs
src-tauri/src/music_sdk/sources/tx/: comment.rs  crypto.rs  helpers.rs  mod.rs  playback.rs  playlist.rs  search.rs  singer.rs
src-tauri/src/music_sdk/sources/wy/: comment.rs  crypto.rs  helpers.rs  mod.rs  playback.rs  playlist.rs  search.rs  singer.rs
src-tauri/src/network/: mod.rs
src-tauri/src/player/: cache.rs  commands.rs  effects.rs  engine.rs  media_control.rs  mod.rs  spectrum.rs
src-tauri/src/plugin/: commands.rs  converter.rs  engine.rs  manager.rs  mod.rs  types.rs
src/api/: songList.ts
src/assets/: base.css  main.css
src/bridge/: index.ts
src/components/: GlobalBackground.vue  LiquidGlass.vue  SettingsSearch.vue  SkeletonLoader.vue  SvgIcon.vue  ThemeSelector.vue  TitleBarControls.vue
src/composables/: useBackgroundRender.ts  useDynamicSongTheme.ts  useEventListener.ts  usePluginUpdateNotice.ts  useSearchPlaylists.ts  useSearchSongs.ts  useSourceAccess.ts  useViewTransition.ts
src/config/: index.ts
src/locales/: index.ts  runtime.ts
src/router/: index.ts
src/services/: musicSdk.ts
src/store/: AudioEffects.ts  Auth.ts  ControlAudio.ts  Equalizer.ts  GlobalPlayStatus.ts  LocalUserDetail.ts  S3Backup.ts  Settings.ts  audioOutput.ts  dlna.ts  download.ts  index.ts  playSetting.ts  plugin.ts  search.ts
src/types/: audio.ts  background.ts  hotkeys.ts  lyric.ts  playList.ts  songList.ts  userInfo.ts  window.d.ts
src/utils/: cors-proxy.ts  downloadHelper.ts  format.ts  imageProxy.ts  liquidGlassConfirm.ts  logger.ts  performanceMonitor.ts  quality.ts  songCover.ts
website/: README.md  index.html  robots.txt  site.webmanifest  sitemap.xml
website/assets/: site-data.js  site-downloads.js  site-init.js  site-ui.js  site.css
(+157 files in other folders)
