[package]
name = "Music"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "lanyin_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
walkdir = "2"
lofty = "0.21"
base64 = "0.22"
lru = "0.12"
futures-util = "0.3"
regex-lite = "0.1"
aes = "0.8"
ecb = "0.1"
md-5 = "0.10"
urlencoding = "2"
wry="0.55.0"
