[package]
name = "mio"
version = "0.1.8"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[lib]
name = "mio_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api", "devtools", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
walkdir = "2"
lofty = "0.21"
base64 = "0.22"
lru = "0.12"
futures-util = "0.3"
regex-lite = "0.1"
aes = "0.8"
ecb = "0.1"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
encoding_rs = "0.8"
flate2 = "1.0"
des = "0.8"
cbc = "0.1"
rand = "0.8"
rsa = "0.9"
hex = "0.4"
urlencoding = "2"
wry="0.55.0"
rodio = "0.19"
cpal = "0.15"
rustfft = "6"
parking_lot = "0.12"
lazy_static = "1"
symphonia = { version = "0.5.5", features = ["aac", "isomp4", "mp3", "flac", "wav", "ogg"] }
flacenc = "0.5"
hmac = "0.12"
aes-gcm = "0.10"
pbkdf2 = "0.12"

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-sys = "0.2"
core-foundation-sys = "0.8"
objc = "0.2"
objc-foundation = "0.1"
block = "0.1"
cocoa = "0.25"
